# substrate-offchain-worker-demo

./: README.md
pallets/example-offchain-worker/src/: lib.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  ocw2.rs
runtime/src/: lib.rs
